[gd_scene load_steps=6 format=3 uid="uid://dd5lsahxchuvh"]

[ext_resource type="Script" path="res://main.gd" id="1_85dwx"]
[ext_resource type="PackedScene" uid="uid://b43x086w7lf0t" path="res://walls.tscn" id="4_e01l2"]
[ext_resource type="PackedScene" uid="uid://dy4gqxbk3i58q" path="res://hud.tscn" id="4_irgsv"]
[ext_resource type="PackedScene" uid="uid://bmld3o1nd67kj" path="res://player2.tscn" id="4_qbnlk"]

[sub_resource type="GDScript" id="GDScript_2tnxe"]
script/source = "extends Marker2D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[node name="main" type="Node"]
script = ExtResource("1_85dwx")

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(576, 321)
script = SubResource("GDScript_2tnxe")

[node name="Hud" parent="." instance=ExtResource("4_irgsv")]

[node name="PLayer2" parent="." instance=ExtResource("4_qbnlk")]
dashColor = Color(0.283665, 0.629136, 0.473356, 1)
normColor = Color(0.0481925, 0.64867, 0.848769, 1)

[node name="Walls" parent="." instance=ExtResource("4_e01l2")]

[connection signal="start_game" from="Hud" to="." method="new_game"]
[connection signal="stop_game" from="Hud" to="." method="stop_game"]
